# leptos-blog

./: Cargo.toml  blog.db
app/: Cargo.toml
app/src/: error_template.rs  lib.rs
app/src/bindings/: hljs.rs  mod.rs
app/src/components/: dark_mode_toggle.rs  mod.rs  nav.rs  post_content.rs  progress_bar.rs
app/src/functions/: auth.rs  dark_mode.rs  mod.rs  post.rs  user.rs
app/src/layouts/: default.rs
app/src/models/: mod.rs  post.rs  user.rs  validation.rs
app/src/providers/: auth_context.rs  color_scheme.rs  mod.rs
app/src/routes/: index.rs  mod.rs
app/src/routes/auth/: login.rs  mod.rs  signup.rs
app/src/routes/blog/: index.rs  mod.rs  post.rs
frontend/src/: lib.rs
posts/: index.json  test-post.md
server/: Cargo.toml
server/src/: fileserv.rs  main.rs
style/: _variables.scss  hljs.scss  main.scss
