[package]
name = "app"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_dom.workspace = true
leptos_axum = { workspace = true, optional = true }

wasm-bindgen.workspace = true
web-sys.workspace = true
http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, optional = true }
gray_matter = { workspace = true, optional = true }
femark = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
axum-extra = { workspace = true, optional = true }

[features]
default = ["hydrate"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_axum", "dep:tokio", "dep:gray_matter", "dep:femark", "dep:chrono", "dep:axum", "dep:axum-extra"]